finished aspects of the carousel

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,8 @@
 
 .textbox1 {
   margin: auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
   width: 1000px;
   height: auto;
   text-align: center;
