--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,17 @@
 
   .logo {
     width: 100%;
+    max-width: 100%;
   }
 }
 
 
 .site {
+  justify-content: center;
   background-color: rgb(189, 191, 195);
   margin: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .header {
@@ -91,9 +95,17 @@
   display: flex;
   margin: auto;
   justify-content: center;
+  max-width: 100%;
+  max-height: 100%;
+  min-width: none;
+  min-height: none;
 }
 
 .footer {
+  display: flex;
+  max-width: 100%;
+  max-height: 100%;
+  position: relative;
   background-color: rgb(189, 191, 195);
   height: 30px;
 }
