--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@
   justify-content: center;
   max-width: 100%;
   max-height: 100%;
-  padding-top: 150px;
+  padding-top: 100px;
 }
 
  .contacts {
@@ -145,15 +145,17 @@
 
   .contacts {
     flex-direction: column;
-    font-size: 2vw;
+    font-size: 3vw;
   }
 
   .contactInfo {
     width: max-content;
+    width: 80%;
   }
 
   .contactTitles {
     padding-bottom: 40px;
+    font-size: 2vh;
   }
 
 }
